crates/graphql-schema-validation/tests/validation_errors/enums_nonempty.errors.txt
  × Syntax error:  --> 1:16
  │   |
  │ 1 | enum TestEnum {}
  │   |                ^---
  │   |
  │   = expected enum_value_definition
